--- a/public/external/elements.html
+++ b/public/external/elements.html
@@ -34,21 +34,21 @@
   <div class="itemCont" id="items4"> </div>
 </div>
 
-<div id=\ "searchBack">
-  <h2 class=\ "itemLabel" style=\ "padding-top:30px">Search Results for {QUERY}</h2>
-  <div style=\ "margin-top: 10px"></div>
-  <div class=\ "searchHolder"></div>
+<div id="searchBack">
+  <h2 class="itemLabel" style="padding-top:30px">Search Results for {QUERY}</h2>
+  <div style="margin-top: 10px"></div>
+  <div class="searchHolder"></div>
   <h3>End of Search Results</h3>
 </div>
 
-<div id=\ "itemPageback">
-  <h2 id=\ "name" class=\ "itemLabel" style=\ "padding-top:30px;padding-left:40px">%ITEM%</h2>
-  <div style=\ "margin-top: 30px"></div>
-  <div id=\ "holder" class=\ "bigHolder">
-    <div class=\ "infoHolder"><label id=\ "itemPrice" style=\ "margin-left:15px;padding-top:25px;font-size:48px">%PRICE%</label><label id=\ "shipping" style=\ "padding-top:5px;font-size:12px">%SHIPPING%</label>
-      <div style=\ "margin-top: 30px"></div><label id=\ "itemDesc" style=\ "margin-left:15px">%DESC%</label>
-      <div style=\ "margin-top: 40px"></div><label id=\ "itemClick" style=\ "margin-left:15px">%INFO%</label>
-      <div style=\ "margin-top: 10px"></div><label id=\ "itemClickNum" style=\ "margin-left:15px">%INFO%</label>
-      <div style=\ "margin-top: 10px"></div><label id=\ "itemOrders" style=\ "margin-left:15px">%INFO%</label>
-      <div style=\ "margin-top: 10px"></div><label id=\ "itemID" style=\ "margin-left:15px">%ID%</label></div><button id=\ "addToCart" class=\ "bigButton">ADD TO CART</button></div>
+<div id="itemPageback">
+  <h2 id="name" class="itemLabel" style="padding-top:30px;padding-left:40px">%ITEM%</h2>
+  <div style="margin-top: 30px"></div>
+  <div id="holder" class="bigHolder">
+    <div class="infoHolder"><label id="itemPrice" style="margin-left:15px;padding-top:25px;font-size:48px">%PRICE%</label><label id="shipping" style="padding-top:5px;font-size:12px">%SHIPPING%</label>
+      <div style="margin-top: 30px"></div><label id="itemDesc" style="margin-left:15px">%DESC%</label>
+      <div style="margin-top: 40px"></div><label id="itemClick" style="margin-left:15px">%INFO%</label>
+      <div style="margin-top: 10px"></div><label id="itemClickNum" style="margin-left:15px">%INFO%</label>
+      <div style="margin-top: 10px"></div><label id="itemOrders" style="margin-left:15px">%INFO%</label>
+      <div style="margin-top: 10px"></div><label id="itemID" style="margin-left:15px">%ID%</label></div><button id="addToCart" class="bigButton">ADD TO CART</button></div>
 </div>
